# cli-any-app

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cli_any_app/: audit.py  config.py  main.py  private_files.py  retention.py  security.py
cli_any_app/api/: auth.py  capture.py  cert.py  domains.py  flows.py  generate.py  retention.py  sessions.py  settings.py  websocket.py
cli_any_app/capture/: addon.py  filters.py  noise_domains.py  privacy.py  proxy_manager.py
cli_any_app/generation/: analyzer.py  generator.py  normalizer.py  pipeline.py  redactor.py  validator.py
cli_any_app/generation/templates/: config.py.j2  pyproject.toml.j2  skill_md.j2
cli_any_app/migrations/: env.py
cli_any_app/migrations/versions/: 20260501_0001_regulated_mvp_schema.py
cli_any_app/models/: __init__.py  audit_event.py  database.py  domain_filter.py  encrypted_payload.py  flow.py  generated_cli.py  generation_attempt.py  request.py  session.py
cli_any_app/ui/static/: index.html
docs/audits/: 2026-05-01-regulated-medical-readiness-review.md  2026-05-01-regulated-medical-remediation-status.md
docs/plans/: 2026-03-12-cli-any-app-design.md  2026-03-12-cli-any-app-implementation.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx
frontend/src/components/: MethodBadge.tsx  StatusBadge.tsx
frontend/src/lib/: api.test.ts  api.ts
frontend/src/pages/: Dashboard.tsx  GenerationProgress.test.tsx  GenerationProgress.tsx  Login.test.tsx  Login.tsx  Recording.test.tsx  Recording.tsx  SessionReview.test.tsx  SessionReview.tsx  SessionSetup.tsx
frontend/src/test/: setup.ts
tests/: conftest.py  test_e2e.py  test_models.py
tests/test_api/: test_cert.py  test_domains.py  test_flows.py  test_generate.py  test_retention.py  test_security.py  test_sessions.py
tests/test_capture/: test_filters.py  test_privacy.py
tests/test_generation/: test_analyzer.py  test_generator.py  test_normalizer.py  test_redactor.py  test_validator.py
(+4 files in other folders)
