[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-any-app"
version = "0.1.0"
description = "Transform mobile app network traffic into agent-usable CLI tools"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.0",
    "cryptography>=42.0.0",
    "qrcode[pil]>=7.4",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.0",
    "pip-audit>=2.7.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.3.0",
]

[tool.setuptools.packages.find]
include = ["cli_any_app*"]

[tool.setuptools.package-data]
cli_any_app = ["migrations/script.py.mako", "ui/static/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
cli-any-app = "cli_any_app.main:cli_entry"
